--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
 
+php_value session.save_path /var/www/eshop/tmp
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
